--- a/apigateway/src/main/resources/angularclient/front/src/login-component/login.component.html
+++ b/apigateway/src/main/resources/angularclient/front/src/login-component/login.component.html
@@ -1,8 +1,9 @@
 <div class="d-flex justify-content-center">
+  <button type="button" class="btn btn-secondary" (click)="testAuth()">Test Auth</button>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="w-40 border border-primary p-2">
     <div class="form-group p-2">
-      <label for="exampleInputEmail1">Email address</label>
-      <input formControlName="email" type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
+      <label for="exampleInputUsername1">Login</label>
+      <input formControlName="username" type="text" class="form-control" aria-describedby="usernameHelp" placeholder="Enter your username">
     </div>
     <div class="form-group p-2">
       <label for="exampleInputPassword1">Password</label>
@@ -13,4 +14,5 @@
     </div>
     <button type="submit" class="btn btn-primary align-left-custom" [disabled]="loginForm.invalid">Submit</button>
   </form>
+
 </div>
