--- a/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
+++ b/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
@@ -1,2 +1,21 @@
-<h1 class="bg-dark text-light p-3 w-40">Tetyuev Wikia</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand text-light p-2" href="#">Wikia</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link text-light" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="/register">Register</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <router-outlet></router-outlet>
