--- a/apigateway/src/main/resources/angularclient/front/src/login-component/login.component.html
+++ b/apigateway/src/main/resources/angularclient/front/src/login-component/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center p-2">
   <button type="button" class="btn btn-secondary" (click)="testAuth()">Test Auth</button>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="w-40 border border-primary p-2">
     <div class="form-group p-2">
