Добавлен редактор и возможность сохранять записи вики

--- a/apigateway/src/main/resources/angularclient/front/src/styles.scss
+++ b/apigateway/src/main/resources/angularclient/front/src/styles.scss
@@ -2,3 +2,5 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+/* Import Angular Material Prebuilt Theme */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
