--- a/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
+++ b/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
@@ -1,21 +1,39 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand text-light p-2" href="#">Wikia</a>
+    <h1 class="navbar-brand text-light p-2" href="#">Wikia</h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link text-light" href="#">Home</a>
-        </li>
-        <li class="nav-item">
+
+
+      <li class="nav-item active me-3">
+        <a class="nav-link text-light" href="#">Home</a>
+      </li>
+
+
+
+      <li *ngIf="isAuthenticated()"class="nav-item me-3">
+          <a 
+            class="nav-link text-light" 
+            href="/register"
+            (click)="logOut()"
+          >
+            Log out
+        </a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link text-light" href="/editor">Editor</a>
+      </li>
+      <ng-container *ngIf="!isAuthenticated()">
+        <li class="nav-item me-3">
           <a class="nav-link text-light" href="/login">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item me-3">
             <a class="nav-link text-light" href="/register">Register</a>
         </li>
-      </ul>
-    </div>
+      </ng-container>
+      <li *ngIf="getUsername() && isAuthenticated()" class="ms-auto me-4">
+        <span class="nav-link text-light">Welcome, {{ getUsername() }}</span>
+      </li>
   </nav>
 <router-outlet></router-outlet>
