--- a/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
+++ b/apigateway/src/main/resources/angularclient/front/src/app/app.component.html
@@ -36,4 +36,7 @@
         <span class="nav-link text-light">Welcome, {{ getUsername() }}</span>
       </li>
   </nav>
+  <div class="d-flex justify-content-center">
+    <app-ad></app-ad>
+  </div>
 <router-outlet></router-outlet>
